validate and clean code, fix image stack on tablet

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -171,6 +171,8 @@ h3 {
       color: $white;
       @media (min-width: 770px) {
         width: 100%;
+        font-size: .95rem;
+        line-height: 1.3rem;
       }
 
     }
@@ -186,7 +188,7 @@ h3 {
   margin: 12px;
 
   @media (min-width: 750px) {
-    width: 33%;
+    width: 30%;
     flex-wrap: nowrap;
   }
 }
